--- a/package.json
+++ b/package.json
@@ -4,38 +4,24 @@
   "license": "GPL-3.0",
   "scripts": {
     "build": "turbo run build",
-    "build:dev": "turbo run build:dev",
     "changeset": "changeset",
-    "eslint:cmd": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint",
-    "eslint:fix": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint . --fix",
-    "eslint:lint": "eslint --config .eslintrc.js --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "fastlane:build": "cd ios && bundle exec fastlane build",
-    "fastlane:test": "cd ios && bundle exec fastlane test",
+    "depcheck:lint": "pnpm -r --no-bail exec depcheck .",
     "fix": "concurrently 'pnpm:*:fix'",
-    "lint": "echo 'Error: no lint specified' && exit 0",
-    "lint:eslint": "pnpm run eslint:lint",
-    "lint:license": "make license-checker",
-    "lint:prettier": "pnpm run prettier:lint",
-    "lint:swiftlint": "pnpm run swiftlint:lint",
-    "lint:swift-format": "pnpm run swift-format:lint",
+    "lint": "concurrently 'pnpm:*:lint'",
+    "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages",
     "pnpm:upgrade": "pnpm upgrade --recursive",
     "prettier:cmd": "prettier",
     "prettier:fix": "prettier --write .",
     "prettier:lint": "prettier --check .",
     "release": "changeset publish",
-    "release:root": "cross-env HUSKY=0 pnpm run release-it",
-    "swiftlint:cmd": "mint run swiftlint",
-    "swiftlint:fix": "mint run swiftlint --fix",
-    "swiftlint:lint": "mint run swiftlint",
-    "swift-format:cmd": "mint run swift-format --in-place --recursive --parallel --ignore-unparsable-files",
-    "swift-format:fix": "mint run swift-format --in-place --recursive --parallel --ignore-unparsable-files ios/**/Sources/**",
-    "swift-format:lint": "mint run swift-format --recursive --parallel --ignore-unparsable-files ios/**/Sources/**",
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "sort-package-json:fix": "sort-package-json '{apps,configurations,contracts,crates,fastlane,ios,packages}/**/package.json'"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.1",
     "@commitlint/config-conventional": "^17.6.6",
+    "@lightdotso/eslint-config": "workspace:*",
+    "@lightdotso/prettier": "workspace:*",
     "@release-it/keep-a-changelog": "^3.1.0",
     "@types/node": "^20.3.2",
     "@types/react": "^18.2.14",
@@ -65,10 +51,14 @@
     "git-cz": "^4.9.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "npm-package-json-lint": "^6.3.0",
+    "npm-package-json-lint-config-default": "^5.0.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "release-it": "^15.11.0",
     "rimraf": "^5.0.1",
+    "solhint": "^3.3.7",
+    "sort-package-json": "^1.57.0",
     "tailwindcss": "^3.3.2",
     "turbo": "^1.10.6",
     "typescript": "^5.1.3",
