--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["rome.rome", "tauri-apps.tauri-vscode", "rust-lang.rust-analyzer"]
+  "recommendations": ["tauri-apps.tauri-vscode", "rust-lang.rust-analyzer"]
 }
