--- a/apps/changelog/package.json
+++ b/apps/changelog/package.json
@@ -17,8 +17,8 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*",
+    "@lightdotso/eslint-config": "workspace:*",
+    "@lightdotso/tsconfig": "workspace:*",
     "typescript": "^4.9.5"
   }
 }
