--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -19,8 +19,8 @@
   },
   "devDependencies": {
     "crx": "^5.0.1",
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*",
+    "@lightdotso/eslint-config": "workspace:*",
+    "@lightdotso/tsconfig": "workspace:*",
     "typescript": "^4.9.5",
     "web-ext": "^7.6.2"
   }
