--- a/configurations/eslint/package.json
+++ b/configurations/eslint/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "eslint-config-custom",
-  "version": "0.0.0",
+  "name": "@lightdotso/eslint-config",
+  "version": "2.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
