--- a/packages/inpage/turbo.json
+++ b/packages/inpage/turbo.json
@@ -4,6 +4,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
+      "env": ["NODE_ENV"],
       "outputs": [
         "../../ios/LightWalletSafariExtension/Resources/inpage.js",
         "../../apps/extension/chrome/inpage.js",
