--- a/turbo.json
+++ b/turbo.json
@@ -4,13 +4,20 @@
     "build": {
       "dependsOn": ["^build"]
     },
-    "lint": {},
+    "lint": {
+      "dependsOn": ["^lint"]
+    },
     "dev": {
       "cache": false,
       "persistent": true
     },
     "//#ci": {
       "cache": false
+    },
+    "//#lint": {
+      "dependsOn": [],
+      "outputs": [],
+      "inputs": ["apps/**", "configurations/**", "contracts/**", "crates/**", "fastlane/**", "packages/**"]
     }
   }
 }
