--- a/packages/popup/package.json
+++ b/packages/popup/package.json
@@ -2,6 +2,16 @@
   "name": "@lightdotso/popup",
   "version": "0.0.1",
   "private": false,
+  "homepage": "https://github.com/LightDotSo/LightDotSo",
+  "bugs": {
+    "url": "https://github.com/LightDotSo/LightDotSo/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LightDotSo/LightDotSo.git"
+  },
+  "license": "GPL-3.0",
+  "author": "Light, Inc.",
   "scripts": {
     "build": "cross-env NODE_ENV=production next build && pnpm run cp:ios",
     "build:dev": "cross-env NODE_ENV=development next build && pnpm run cp:ios",
