--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -2,6 +2,16 @@
   "name": "@lightdotso/desktop",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://github.com/LightDotSo/LightDotSo",
+  "bugs": {
+    "url": "https://github.com/LightDotSo/LightDotSo/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LightDotSo/LightDotSo.git"
+  },
+  "license": "GPL-3.0",
+  "author": "Light, Inc.",
   "type": "module",
   "scripts": {
     "build": "tsc && vite build",
@@ -22,5 +32,8 @@
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.5",
     "vite": "^4.3.9"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
