--- a/configurations/prettier/package.json
+++ b/configurations/prettier/package.json
@@ -21,7 +21,6 @@
     "prettier-plugin-tailwindcss": "^0.3.0"
   },
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   }
 }
