--- a/contracts/package.json
+++ b/contracts/package.json
@@ -2,6 +2,16 @@
   "name": "@lightdotso/contracts",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://github.com/LightDotSo/LightDotSo",
+  "bugs": {
+    "url": "https://github.com/LightDotSo/LightDotSo/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LightDotSo/LightDotSo.git"
+  },
+  "license": "GPL-3.0",
+  "author": "Light, Inc.",
   "scripts": {
     "build": "echo 'Empty build script for turborepo trigger'"
   }
