--- a/packages/resources/package.json
+++ b/packages/resources/package.json
@@ -2,6 +2,16 @@
   "name": "@lightdotso/resources",
   "version": "0.0.1",
   "private": false,
+  "homepage": "https://github.com/LightDotSo/LightDotSo",
+  "bugs": {
+    "url": "https://github.com/LightDotSo/LightDotSo/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LightDotSo/LightDotSo.git"
+  },
+  "license": "GPL-3.0",
+  "author": "Light, Inc.",
   "scripts": {
     "build": "pnpm run build:locales && pnpm run build:images",
     "build:images": "pnpm run cp:images:ios && pnpm run cp:images:chrome && pnpm run cp:images:firefox",
