--- a/packages/popup/package.json
+++ b/packages/popup/package.json
@@ -43,7 +43,6 @@
     "typescript": "5.0.2"
   },
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   }
 }
