--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -26,7 +26,6 @@
     "typescript": "^5.1.3"
   },
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   }
 }
