--- a/packages/inpage/package.json
+++ b/packages/inpage/package.json
@@ -30,7 +30,6 @@
     "typescript": "^5.1.3"
   },
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   }
 }
