--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -78,7 +78,7 @@ jobs:
           xcode-version: "14.1"
       - name: Node Build
         run: |
-          pnpm run build
+          pnpm turbo run build
       - name: Make iOS
         run: |
           make ios
