--- a/ios/package.json
+++ b/ios/package.json
@@ -2,8 +2,24 @@
   "name": "@lightdotso/ios",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://github.com/LightDotSo/LightDotSo",
+  "bugs": {
+    "url": "https://github.com/LightDotSo/LightDotSo/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LightDotSo/LightDotSo.git"
+  },
+  "license": "GPL-3.0",
+  "author": "Light, Inc.",
   "scripts": {
-    "build": "echo 'Empty build script for turborepo trigger'"
+    "build": "echo 'Empty build script for turborepo trigger'",
+    "swift-format:cmd": "mint run swift-format --in-place --recursive --parallel --ignore-unparsable-files",
+    "swift-format:fix": "mint run swift-format --in-place --recursive --parallel --ignore-unparsable-files ios/**/Sources/**",
+    "swift-format:lint": "mint run swift-format --recursive --parallel --ignore-unparsable-files ios/**/Sources/**",
+    "swiftlint:cmd": "mint run swiftlint",
+    "swiftlint:fix": "mint run swiftlint --fix",
+    "swiftlint:lint": "mint run swiftlint"
   },
   "dependencies": {
     "@lightdotso/crates": "workspace:*",
