--- a/configurations/eslint/package.json
+++ b/configurations/eslint/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "eslint-config-custom",
-  "version": "0.0.0",
-  "main": "index.js",
+  "name": "@lightdotso/eslint-config",
+  "version": "2.0.0",
   "license": "MIT",
+  "main": "index.js",
   "dependencies": {
     "eslint-config-next": "^13.4.7",
     "eslint-config-prettier": "^8.8.0",
