--- a/apps/changelog/package.json
+++ b/apps/changelog/package.json
@@ -25,10 +25,14 @@
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
+    "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.24",
+    "tailwindcss": "3.3.2",
     "typescript": "^4.9.5"
   },
   "publishConfig": {
