--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -25,11 +25,15 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@lightdotso/tailwindcss": "workspace:*",
     "@tauri-apps/cli": "^1.4.0",
     "@types/node": "^18.16.18",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.24",
+    "tailwindcss": "3.3.2",
     "typescript": "^4.9.5",
     "vite": "^4.3.9"
   },
