--- a/contracts/package.json
+++ b/contracts/package.json
@@ -13,6 +13,7 @@
   "license": "GPL-3.0",
   "author": "Light, Inc.",
   "scripts": {
-    "build": "echo 'Empty build script for turborepo trigger'"
+    "build": "echo 'Empty build script for turborepo trigger'",
+    "lint": "cd .. && pnpm solhint 'contracts/**/*.sol'"
   }
 }
