--- a/contracts/turbo.json
+++ b/contracts/turbo.json
@@ -6,6 +6,9 @@
       "cache": false,
       "inputs": ["src/**", "test/**", "../lib/**", "../.gitmodules", "../foundry.toml", "../remappings.txt"],
       "outputs": ["../out", "../.gas-snapshot", "../foundry.toml"]
+    },
+    "lint": {
+      "dependsOn": ["build"]
     }
   }
 }
