--- a/contracts/turbo.json
+++ b/contracts/turbo.json
@@ -3,6 +3,7 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
+      "cache": false,
       "inputs": ["src/**", "test/**", "../lib/**", "../.gitmodules", "../foundry.toml", "../remappings.txt"],
       "outputs": ["../out", "../.gas-snapshot", "../foundry.toml"]
     },
