chore: refactor changesets

--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -27,6 +27,8 @@ jobs:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    permissions:
+      pull-requests: write
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -45,6 +47,7 @@ jobs:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    continue-on-error: true
     env:
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
