--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -24,10 +24,11 @@ jobs:
         run: |
           pnpm changeset status
   changesets-pr:
-    if: github.event_name == 'push'
+    # if: github.event_name == 'push'
     runs-on: ubuntu-latest
     timeout-minutes: 30
     permissions:
+      contents: write
       pull-requests: write
     steps:
       - name: Fetch Head
@@ -44,7 +45,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
   changesets-release:
-    if: github.event_name == 'push'
+    # if: github.event_name == 'push'
     runs-on: ubuntu-latest
     timeout-minutes: 30
     continue-on-error: true
