--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -28,6 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     permissions:
+      contents: write
       pull-requests: write
     steps:
       - name: Fetch Head
