--- a/configurations/tsconfig/package.json
+++ b/configurations/tsconfig/package.json
@@ -1,8 +1,17 @@
 {
   "name": "@lightdotso/tsconfig",
-  "version": "0.0.0",
-  "private": true,
-  "license": "MIT",
+  "version": "1.0.0",
+  "private": false,
+  "homepage": "https://github.com/LightDotSo/LightDotSo",
+  "bugs": {
+    "url": "https://github.com/LightDotSo/LightDotSo/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LightDotSo/LightDotSo.git"
+  },
+  "license": "GPL-3.0",
+  "author": "Light, Inc.",
   "publishConfig": {
     "access": "public"
   }
