chore: refactor changeset versions (#52)
* chore: refactor changeset versions

* chore: update

* chore: update

* chore: update

* chore: update

--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -20,7 +20,8 @@ jobs:
           fetch-depth: 0
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
-      - name: Check for changeset
+      - if: github.actor != 'LightDotSoBot'
+        name: Check for changeset
         run: |
           pnpm changeset status
   changesets-pr:
@@ -48,7 +49,6 @@ jobs:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    continue-on-error: true
     env:
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
@@ -64,6 +64,7 @@ jobs:
           pnpm turbo run build
       - name: Publish to NPM
         uses: changesets/action@v1
+        continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
