--- a/package.json
+++ b/package.json
@@ -1,18 +1,33 @@
 {
   "name": "lightdotso",
+  "version": "0.0.0",
   "private": true,
+  "homepage": "https://github.com/LightDotSo/LightDotSo",
+  "bugs": {
+    "url": "https://github.com/LightDotSo/LightDotSo/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LightDotSo/LightDotSo.git"
+  },
   "license": "GPL-3.0",
+  "author": "Light, Inc.",
   "scripts": {
     "build": "turbo run build",
     "changeset": "changeset",
     "fix": "concurrently 'pnpm:*:fix'",
+    "forge:snapshot:cmd": "FOUNDRY_PROFILE=local forge snapshot",
     "lint": "concurrently 'pnpm:*:lint'",
     "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages",
     "pnpm:upgrade": "pnpm upgrade --recursive",
+    "prepare": "husky install",
     "prettier:cmd": "prettier",
     "prettier:fix": "prettier --write .",
     "prettier:lint": "prettier --check .",
     "release": "changeset publish",
+    "solhint:cmd": "solhint 'contracts/**/*.sol'",
+    "solhint:fix": "solhint 'contracts/**/*.sol' --fix",
+    "solhint:lint": "solhint 'contracts/**/*.sol'",
     "sort-package-json:fix": "sort-package-json '{apps,configurations,contracts,crates,fastlane,ios,packages}/**/package.json'",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
@@ -22,6 +37,7 @@
     "@commitlint/config-conventional": "^17.6.6",
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/prettier": "workspace:*",
+    "@lightdotso/tsconfig": "workspace:*",
     "@release-it/keep-a-changelog": "^3.1.0",
     "@types/node": "^20.3.2",
     "@types/react": "^18.2.14",
@@ -50,7 +66,7 @@
     "eslint-plugin-tailwindcss": "3.10.1",
     "git-cz": "^4.9.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^13.2.3",
     "npm-package-json-lint": "^6.4.0",
     "npm-package-json-lint-config-default": "^5.0.0",
     "postcss": "^8.4.24",
@@ -61,7 +77,7 @@
     "sort-package-json": "^1.57.0",
     "tailwindcss": "^3.3.2",
     "turbo": "^1.10.6",
-    "typescript": "^5.1.5",
+    "typescript": "^5.1.6",
     "vercel": "^28.20.0"
   },
   "packageManager": "pnpm@8.6.3"
