--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -74,6 +74,9 @@ jobs:
       - name: Install Deps
         run: |
           forge install
+      - name: Run Build
+        run: |
+          forge build
       - name: Storage Check
         run: |
           ./contracts/storage.sh
