--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -58,6 +58,35 @@ jobs:
       - name: Contracts Lint
         run: |
           forge fmt --check
+  contracts-storage:
+    if: needs.contracts-turbo.outputs.trigger == 'true'
+    needs:
+      - contracts-turbo
+    runs-on: ubuntu-latest
+    timeout-minutes: 90
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+      - name: Install Deps
+        run: |
+          forge install
+      - name: Run Build
+        run: |
+          forge build
+      - name: Storage Check
+        run: |
+          make storage-layout
+      - name: Check Storage Changes
+        run: |
+          git diff --quiet
+      - if: failure()
+        name: Show Storage Changes
+        run: |
+          git diff
   contracts-test:
     if: needs.contracts-turbo.outputs.trigger == 'true'
     needs:
@@ -74,14 +103,27 @@ jobs:
       - name: Install Deps
         run: |
           forge install
-      - name: Check gas snapshots
+      - name: Run Test
+        run: |
+          forge test
+      - name: Check Gas Snapshots
         run: |
           forge snapshot --check
+      - name: Run Coverage
+        run: |
+          forge coverage --report lcov
+      - name: Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: lcov.info
+          fail_ci_if_error: false
   contracts-check:
     if: always()
     needs:
       - contracts-build
       - contracts-lint
+      - contracts-storage
       - contracts-test
     runs-on: ubuntu-latest
     timeout-minutes: 3
@@ -89,5 +131,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: contracts-build,contracts-lint,contracts-test
+          allowed-skips: contracts-build,contracts-lint,contracts-storage,contracts-test
           jobs: ${{ toJSON(needs) }}
