--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,5 @@
 comment:
+  layout: "reach, files, flags, components"
   require_changes: true
 coverage:
   status:
@@ -12,3 +13,17 @@ coverage:
         target: auto
         threshold: null
         informational: true
+component_management:
+  individual_components:
+    - component_id: contracts
+      name: Contracts
+      paths:
+        - contracts/src/**
+    - component_id: core
+      name: Core
+      paths:
+        - crates/core/**
+    - component_id: ios
+      name: iOS
+      paths:
+        - ios/LightWalletCore/**
