--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "turbo run build",
     "changeset": "changeset",
     "fix": "concurrently 'pnpm:*:fix'",
-    "forge:snapshot:cmd": "FOUNDRY_PROFILE=local forge snapshot",
+    "forge:fmt:cmd": "forge fmt",
+    "forge:snapshot:cmd": "forge snapshot && echo",
     "lint": "concurrently 'pnpm:*:lint'",
     "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages",
     "pnpm:upgrade": "pnpm upgrade --recursive",
